Fixed scrollbar problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@
 	RESETS
 	========================================================================== */
 																				
+html {
+	overflow-y: scroll;
+}
 
 body {
 	background: #ffffff;
